2008-06-05  Jb Evain  <jbevain@novell.com>

	* Expression.cs (GetUserConversionMethod): check for convertion
	operators on both types.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* Expression.cs (ConditionalBinaryCheck): if a method is passed,
	checked that the operators true and false are also defined.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs (Emit): deal with binary expressions
	where only the left is lifted.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* Extensions.cs: Add Type.MakeNullableType helper.
	* Expression.cs (MakeSimpleBinary, MakeBoolBinar): Properly
	creat lifted/lifted to null/not lifted
	user defined binary expressions.
	* BinaryExpression.cs (Emit): implement compilation of
	lifted and lifted to null user defined binary operators.

2008-06-05  Jb Evain  <jbevain@novell.com>

	* Expression.cs (MakeSimpleUnary): properly create lifted/not lifted
	unary expressions with user defined operators.
	* UnaryExpression.cs (Emit): fix compilation of lifted user operators.

2008-05-30  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs (Emit): fix convertion from nullable
	to nullable types.

2008-05-29  Jb Evain  <jbevain@novell.com>

	* Expression.cs (Power): allow bool?.
	* BinaryExpression.cs: properly deal with lifted power expression.

2008-05-29  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs (Emit): fix lifted andalso and orelse.

2008-05-29  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs (Emit): properly emit lifted to null
	relational binary expressions.

2008-05-28  Jb Evain  <jbevain@novell.com>

	* BinaryExpression.cs (Emit): rework compilation of
	arithmetic and relational lifted binary expressions.

2008-05-28  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs (Emit): implement support for compiling
	lifted unary expressions.

2008-05-27  Jb Evain  <jbevain@novell.com>

	* UnaryExpression.cs (EmitConvert): implement nullable to nullable
	convert.

2008-05-20  Roei Erez  <roeie@mainsoft.com>
